[gd_scene load_steps=27 format=3 uid="uid://cgt568l8kwmu7"]

[ext_resource type="Script" path="res://ui/settings_menu.gd" id="1_eqi5l"]
[ext_resource type="Texture2D" uid="uid://dcohboog3guj7" path="res://ui/art/book_cover_open.png" id="1_t4atj"]
[ext_resource type="Texture2D" uid="uid://cy0huwr8u0bph" path="res://visuals/Textures/UI/Screenshot 2024-10-23 161818.png" id="2_kvxmy"]
[ext_resource type="Texture2D" uid="uid://cmkk32le5nmx2" path="res://ui/art/page_torn.png" id="2_m1rcv"]
[ext_resource type="Texture2D" uid="uid://cx4c5iho74frh" path="res://ui/art/pages_grouped.png" id="3_0uavt"]
[ext_resource type="Script" path="res://scenes/ui/background_panner.gd" id="3_41xas"]
[ext_resource type="Texture2D" uid="uid://boacwjwimkf5v" path="res://ui/art/top_page_single.png" id="4_1upcm"]
[ext_resource type="Texture2D" uid="uid://c21bekmp0mrsx" path="res://ui/art/thread.png" id="5_owi6c"]
[ext_resource type="FontFile" uid="uid://d1gnl65obr7h4" path="res://ui/fonts/Kings-Regular.ttf" id="5_yo3np"]
[ext_resource type="Texture2D" uid="uid://dr5v4e0gcl2bb" path="res://ui/art/small_page.png" id="6_dcws8"]
[ext_resource type="FontFile" uid="uid://ypscax7btp20" path="res://ui/fonts/ReenieBeanie-Regular.ttf" id="6_jsgm6"]
[ext_resource type="Texture2D" uid="uid://cijxpb3s3wtdm" path="res://ui/art/tape.png" id="7_84cat"]
[ext_resource type="Theme" uid="uid://cxlqi1so5wmjb" path="res://ui/themes/standard_theme.tres" id="7_ncmin"]
[ext_resource type="PackedScene" uid="uid://lrhmy4b1vyb8" path="res://scenes/ui/volume_slider.tscn" id="8_wdice"]
[ext_resource type="PackedScene" uid="uid://b8a44kckebu4e" path="res://scenes/ui/window_mode_button.tscn" id="9_k6jhe"]
[ext_resource type="PackedScene" uid="uid://dsylvhnqynf7j" path="res://scenes/ui/resolution_mode_button.tscn" id="10_nmnii"]
[ext_resource type="Texture2D" uid="uid://bfbl33k3gelxp" path="res://ui/art/select_icons.png" id="10_qogv1"]
[ext_resource type="Texture2D" uid="uid://djteiwjuom4de" path="res://ui/art/paper_button_normal.png" id="11_c8rbg"]
[ext_resource type="Texture2D" uid="uid://bklo6bmmsjuw4" path="res://ui/art/paper_button_pressed.png" id="12_tpffv"]
[ext_resource type="Texture2D" uid="uid://bp624ujgre6t0" path="res://ui/art/paper_button_hover.png" id="13_jnocb"]
[ext_resource type="Texture2D" uid="uid://be47xvtrlygwf" path="res://ui/art/paper_button_focus.png" id="14_bwqnd"]
[ext_resource type="Texture2D" uid="uid://bm8ibo6msqkp5" path="res://ui/art/blood.png" id="20_o6yr0"]

[sub_resource type="Animation" id="Animation_fi3rj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blood:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(853, -465)]
}

[sub_resource type="Animation" id="Animation_gay0k"]
resource_name = "blood_trans"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blood:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(853, -465), Vector2(853, 1200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tql42"]
_data = {
"RESET": SubResource("Animation_fi3rj"),
"blood_trans": SubResource("Animation_gay0k")
}

[sub_resource type="Environment" id="Environment_3cn4i"]
background_mode = 3
tonemap_mode = 3

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eqi5l")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.564706, 0.564706, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -899.0
offset_top = -462.0
offset_right = 823.0
offset_bottom = 455.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_kvxmy")
expand_mode = 1
script = ExtResource("3_41xas")

[node name="book_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="book_cover" type="TextureRect" parent="book_container"]
layout_mode = 2
texture = ExtResource("1_t4atj")
stretch_mode = 3

[node name="right_side" type="MarginContainer" parent="book_container"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = -41
theme_override_constants/margin_right = 230
theme_override_constants/margin_bottom = 10

[node name="pages_container" type="HBoxContainer" parent="book_container/right_side"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="torn_page" type="TextureRect" parent="book_container/right_side/pages_container"]
layout_mode = 2
texture = ExtResource("2_m1rcv")
stretch_mode = 3

[node name="full_pages" type="HBoxContainer" parent="book_container/right_side/pages_container"]
layout_mode = 2
theme_override_constants/separation = -414

[node name="grouped_pages" type="TextureRect" parent="book_container/right_side/pages_container/full_pages"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_0uavt")
stretch_mode = 3

[node name="single_page" type="TextureRect" parent="book_container/right_side/pages_container/full_pages"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_1upcm")
stretch_mode = 3

[node name="content_margin" type="MarginContainer" parent="book_container/right_side/pages_container/full_pages/single_page"]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 10.0
offset_right = 405.0
offset_bottom = 598.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 20

[node name="controls_content" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin"]
unique_name_in_owner = true
layout_mode = 2

[node name="title" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.649633, 0.447809, 0.219303, 1)
theme_override_colors/font_outline_color = Color(0.294772, 0.181172, 0.00790796, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_yo3np")
theme_override_font_sizes/font_size = 41
text = "CONTROLS"

[node name="controls_container" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="movement" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/movement"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_font_sizes/font_size = 40
text = "Movement"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/movement"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "W/A/S/D"

[node name="run" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = -10

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/run"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Run"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/run"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Shift + W/A/S/D"

[node name="interact" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = 72

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/interact"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Interact"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/interact"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Left-Click"

[node name="drop" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = 184

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/drop"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Drop Item"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/drop"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Q"

[node name="throw" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = 178

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/throw"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Throw Item"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/throw"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "T"

[node name="hand_switch" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/hand_switch"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Hand Switch"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/hand_switch"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Tab"

[node name="stop_climbing" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container"]
layout_mode = 2
theme_override_constants/separation = 107

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/stop_climbing"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Stop Climbing"

[node name="controls" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/controls_content/controls_container/stop_climbing"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Space"

[node name="accessibility_content" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="title" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/accessibility_content"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.649633, 0.447809, 0.219303, 1)
theme_override_colors/font_outline_color = Color(0.294772, 0.181172, 0.00790796, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_yo3np")
theme_override_font_sizes/font_size = 41
text = "ACCESSIBILITY"
horizontal_alignment = 1

[node name="controls_container" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/accessibility_content"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="HintsCheck" type="CheckBox" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/accessibility_content/controls_container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.649633, 0.447809, 0.219303, 1)
theme_override_colors/font_outline_color = Color(0.294772, 0.181172, 0.00790796, 1)
theme_override_fonts/font = ExtResource("5_yo3np")
theme_override_font_sizes/font_size = 42
text = "Hints"

[node name="audio_content" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="title" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.649633, 0.447809, 0.219303, 1)
theme_override_colors/font_outline_color = Color(0.294772, 0.181172, 0.00790796, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_yo3np")
theme_override_font_sizes/font_size = 41
text = "AUDIO"
horizontal_alignment = 1

[node name="audio_container" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="master" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/master"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Master"

[node name="volume_slider" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/master" instance=ExtResource("8_wdice")]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
bus_name = "Master"

[node name="music" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/music"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="volume_slider" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/music" instance=ExtResource("8_wdice")]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
bus_name = "Music"

[node name="sound_effects" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/sound_effects"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Sound Effects"

[node name="volume_slider" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/sound_effects" instance=ExtResource("8_wdice")]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
bus_name = "SoundEffects"

[node name="outside_sound" type="HBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="action" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/outside_sound"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.996078, 0.823529, 1)
theme_override_fonts/font = ExtResource("6_jsgm6")
theme_override_font_sizes/font_size = 40
text = "Outside"

[node name="volume_slider" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/audio_content/audio_container/outside_sound" instance=ExtResource("8_wdice")]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
bus_name = "OutsideSounds"

[node name="display_content" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="title" type="Label" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/display_content"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.649633, 0.447809, 0.219303, 1)
theme_override_colors/font_outline_color = Color(0.294772, 0.181172, 0.00790796, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_yo3np")
theme_override_font_sizes/font_size = 41
text = "DISPLAY"
horizontal_alignment = 1

[node name="controls_container" type="VBoxContainer" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/display_content"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="window_mode_button" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/display_content/controls_container" instance=ExtResource("9_k6jhe")]
layout_mode = 2

[node name="resolution_mode_button" parent="book_container/right_side/pages_container/full_pages/single_page/content_margin/display_content/controls_container" instance=ExtResource("10_nmnii")]
layout_mode = 2

[node name="thread_container" type="MarginContainer" parent="book_container/right_side"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = -587
theme_override_constants/margin_right = -230

[node name="thread" type="TextureRect" parent="book_container/right_side/thread_container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_owi6c")
stretch_mode = 3

[node name="left_side" type="MarginContainer" parent="book_container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = -430
theme_override_constants/margin_top = -310

[node name="small_page_container" type="VBoxContainer" parent="book_container/left_side"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = -340

[node name="small_page" type="TextureRect" parent="book_container/left_side/small_page_container"]
layout_mode = 2
texture = ExtResource("6_dcws8")
stretch_mode = 3

[node name="buttons_margin" type="MarginContainer" parent="book_container/left_side/small_page_container/small_page"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.5
offset_right = 108.5
offset_bottom = 91.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="button_container" type="VBoxContainer" parent="book_container/left_side/small_page_container/small_page/buttons_margin"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="controls_button" type="Button" parent="book_container/left_side/small_page_container/small_page/buttons_margin/button_container"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_font_sizes/font_size = 30
text = "CONTROLS"
icon = ExtResource("10_qogv1")
icon_alignment = 1

[node name="accessibility_button" type="Button" parent="book_container/left_side/small_page_container/small_page/buttons_margin/button_container"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_font_sizes/font_size = 30
text = "ACCESSIBILITY"
icon = ExtResource("10_qogv1")
icon_alignment = 1

[node name="audio_button" type="Button" parent="book_container/left_side/small_page_container/small_page/buttons_margin/button_container"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_font_sizes/font_size = 30
text = "AUDIO"
icon = ExtResource("10_qogv1")
icon_alignment = 1

[node name="display_button" type="Button" parent="book_container/left_side/small_page_container/small_page/buttons_margin/button_container"]
layout_mode = 2
theme = ExtResource("7_ncmin")
theme_override_font_sizes/font_size = 30
text = "DISPLAY"
icon = ExtResource("10_qogv1")
icon_alignment = 1

[node name="tape" type="TextureRect" parent="book_container/left_side/small_page_container"]
layout_mode = 2
texture = ExtResource("7_84cat")
stretch_mode = 3

[node name="back_button_container" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="back_button" type="TextureButton" parent="back_button_container"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_ncmin")
texture_normal = ExtResource("11_c8rbg")
texture_pressed = ExtResource("12_tpffv")
texture_hover = ExtResource("13_jnocb")
texture_focused = ExtResource("14_bwqnd")

[node name="Label" type="Label" parent="back_button_container/back_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -24.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_ncmin")
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blood" type="Sprite2D" parent="."]
top_level = true
position = Vector2(853, -465)
texture = ExtResource("20_o6yr0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tql42")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3cn4i")

[connection signal="toggled" from="book_container/right_side/pages_container/full_pages/single_page/content_margin/accessibility_content/controls_container/HintsCheck" to="." method="_on_hints_check_toggled"]
[connection signal="pressed" from="book_container/left_side/small_page_container/small_page/buttons_margin/button_container/controls_button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="book_container/left_side/small_page_container/small_page/buttons_margin/button_container/accessibility_button" to="." method="_on_accessibility_button_pressed"]
[connection signal="pressed" from="book_container/left_side/small_page_container/small_page/buttons_margin/button_container/audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="book_container/left_side/small_page_container/small_page/buttons_margin/button_container/display_button" to="." method="_on_display_button_pressed"]
